--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vocabulariu</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Vocabularius</title>
   </head>
   <body>
-    <h2 id="dayOfYear"></h2>
     <h3 id="palabra"></h3>
     <p id="definicion"></p>
+    <p id="uso"></p>
   </body>
+  <script src="./main.js"></script>
 </html>
